Fix build system

--- a/src/emhashmap/Makefile.am
+++ b/src/emhashmap/Makefile.am
@@ -4,5 +4,5 @@ AM_LDFLAGS =
 includedir = /usr/local/include
 include_HEADERS = emhashmap.h
 
-noinst_LTLIBRARIES = libemhashmap.la
+lib_LTLIBRARIES = libemhashmap.la
 libemhashmap_la_SOURCES = emhashmap.c
