Removing unnecessary items

--- a/BsonJavaPort/bson_java_port/bintray.properties
+++ b/BsonJavaPort/bson_java_port/bintray.properties
@@ -1,8 +1,8 @@
-bintray.user=askirk
-bintray.key=b76b2898fee7e3521264ceada9f0df033c030729
+bintray.user=user
+bintray.key=key
 bintray.repo=sdl_android
 bintray.artifact=bson_java_port
 bintray.userorg=smartdevicelink
 bintray.publish=false
-bintray.version=1.0.0
-bintray.vcs=1.0.0
+bintray.version=x.x.x
+bintray.vcs=x.x.x
