--- a/BsonJavaPort/bson_java_port/build.gradle
+++ b/BsonJavaPort/bson_java_port/build.gradle
@@ -3,18 +3,21 @@ apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 21
-    buildToolsVersion "25.0.2"
+    buildToolsVersion "27.0.3"
     defaultConfig {
         minSdkVersion 8
         targetSdkVersion 19
         versionCode 1
-        versionName "1.0.0"
+        versionName "1.1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        ndk{
+            abiFilters "armeabi-v7a", "arm64-v8a", "x86", "x86_64"
+        }
     }
     buildTypes {
         release {
             minifyEnabled false
-            proguardFiles.add(file('proguard-android.txt'))
+            proguardFiles getDefaultProguardFile('proguard-android.txt')
         }
     }
     externalNativeBuild {
@@ -26,11 +29,12 @@ android {
 
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+    testImplementation 'junit:junit:4.12'
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    testCompile 'junit:junit:4.12'
+    androidTestImplementation 'junit:junit:4.12'
 }
 
 buildscript {
