Add test cases for read_int64_le()
Note: I don't think we should include aclocal.m4 and *.in files.
Since they have been already in the repo, I just followed
its culture.

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 *.so
 *.la
 *.lo
+*.log
+*.trs
 sample
 Makefile
 .deps/
@@ -10,3 +12,4 @@ Makefile
 /config.*
 /libtool
 /stamp-h1
+/test/bson_util_test
