--- a/Makefile.am
+++ b/Makefile.am
@@ -1,5 +1,7 @@
 ACLOCAL_AMFLAGS = -I m4
 AUTOMAKE_OPTIONS = foreign
+confdir = $(sysconfdir)
+conf_DATA = libbson.pc
 SUBDIRS = src
 if BUILD_LUA
 SUBDIRS += lua
