--- a/Makefile.in
+++ b/Makefile.in
@@ -194,7 +194,7 @@ CSCOPE = cscope
 DIST_SUBDIRS = src lua test
 am__DIST_COMMON = $(srcdir)/Makefile.in $(srcdir)/config.h.in \
 	$(srcdir)/libbson.pc.in ar-lib compile config.guess config.sub \
-	depcomp install-sh ltmain.sh missing
+	install-sh ltmain.sh missing
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
 distdir = $(PACKAGE)-$(VERSION)
 top_distdir = $(distdir)
