--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -1,7 +1,7 @@
 TESTS = bson_util_test bson_object_test
 check_PROGRAMS = bson_util_test bson_object_test
 
-bson_util_test_SOURCES = bson_util_test.c $(top_builddir)/src/bson_util.c
+bson_util_test_SOURCES = bson_util_test.c ../src/bson_util.c
 bson_util_test_CFLAGS = -Wall -I../src @CHECK_CFLAGS@
 bson_util_test_LDADD = @CHECK_LIBS@
 
