--- a/test/Makefile.in
+++ b/test/Makefile.in
@@ -116,7 +116,7 @@ bson_object_test_LINK = $(LIBTOOL) $(AM_V_lt) --tag=CC \
 	$(bson_object_test_LDFLAGS) $(LDFLAGS) -o $@
 am__dirstamp = $(am__leading_dot)dirstamp
 am_bson_util_test_OBJECTS = bson_util_test-bson_util_test.$(OBJEXT) \
-	$(top_builddir)/src/bson_util_test-bson_util.$(OBJEXT)
+	../src/bson_util_test-bson_util.$(OBJEXT)
 bson_util_test_OBJECTS = $(am_bson_util_test_OBJECTS)
 bson_util_test_DEPENDENCIES =
 bson_util_test_LINK = $(LIBTOOL) $(AM_V_lt) --tag=CC \
@@ -522,7 +522,7 @@ target_alias = @target_alias@
 top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
-bson_util_test_SOURCES = bson_util_test.c $(top_builddir)/src/bson_util.c
+bson_util_test_SOURCES = bson_util_test.c ../src/bson_util.c
 bson_util_test_CFLAGS = -Wall -I../src @CHECK_CFLAGS@
 bson_util_test_LDADD = @CHECK_LIBS@
 bson_object_test_SOURCES = bson_object_test.c
@@ -575,15 +575,14 @@ clean-checkPROGRAMS:
 bson_object_test$(EXEEXT): $(bson_object_test_OBJECTS) $(bson_object_test_DEPENDENCIES) $(EXTRA_bson_object_test_DEPENDENCIES) 
 	@rm -f bson_object_test$(EXEEXT)
 	$(AM_V_CCLD)$(bson_object_test_LINK) $(bson_object_test_OBJECTS) $(bson_object_test_LDADD) $(LIBS)
-$(top_builddir)/src/$(am__dirstamp):
-	@$(MKDIR_P) $(top_builddir)/src
-	@: > $(top_builddir)/src/$(am__dirstamp)
-$(top_builddir)/src/$(DEPDIR)/$(am__dirstamp):
-	@$(MKDIR_P) $(top_builddir)/src/$(DEPDIR)
-	@: > $(top_builddir)/src/$(DEPDIR)/$(am__dirstamp)
-$(top_builddir)/src/bson_util_test-bson_util.$(OBJEXT):  \
-	$(top_builddir)/src/$(am__dirstamp) \
-	$(top_builddir)/src/$(DEPDIR)/$(am__dirstamp)
+../src/$(am__dirstamp):
+	@$(MKDIR_P) ../src
+	@: > ../src/$(am__dirstamp)
+../src/$(DEPDIR)/$(am__dirstamp):
+	@$(MKDIR_P) ../src/$(DEPDIR)
+	@: > ../src/$(DEPDIR)/$(am__dirstamp)
+../src/bson_util_test-bson_util.$(OBJEXT): ../src/$(am__dirstamp) \
+	../src/$(DEPDIR)/$(am__dirstamp)
 
 bson_util_test$(EXEEXT): $(bson_util_test_OBJECTS) $(bson_util_test_DEPENDENCIES) $(EXTRA_bson_util_test_DEPENDENCIES) 
 	@rm -f bson_util_test$(EXEEXT)
@@ -591,12 +590,12 @@ bson_util_test$(EXEEXT): $(bson_util_test_OBJECTS) $(bson_util_test_DEPENDENCIES
 
 mostlyclean-compile:
 	-rm -f *.$(OBJEXT)
-	-rm -f $(top_builddir)/src/*.$(OBJEXT)
+	-rm -f ../src/*.$(OBJEXT)
 
 distclean-compile:
 	-rm -f *.tab.c
 
-@AMDEP_TRUE@@am__include@ @am__quote@$(top_builddir)/src/$(DEPDIR)/bson_util_test-bson_util.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@../src/$(DEPDIR)/bson_util_test-bson_util.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/bson_object_test-bson_object_test.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/bson_util_test-bson_util_test.Po@am__quote@
 
@@ -652,19 +651,19 @@ bson_util_test-bson_util_test.obj: bson_util_test.c
 @AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
 @am__fastdepCC_FALSE@	$(AM_V_CC@am__nodep@)$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(bson_util_test_CFLAGS) $(CFLAGS) -c -o bson_util_test-bson_util_test.obj `if test -f 'bson_util_test.c'; then $(CYGPATH_W) 'bson_util_test.c'; else $(CYGPATH_W) '$(srcdir)/bson_util_test.c'; fi`
 
-$(top_builddir)/src/bson_util_test-bson_util.o: $(top_builddir)/src/bson_util.c
-@am__fastdepCC_TRUE@	$(AM_V_CC)$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(bson_util_test_CFLAGS) $(CFLAGS) -MT $(top_builddir)/src/bson_util_test-bson_util.o -MD -MP -MF $(top_builddir)/src/$(DEPDIR)/bson_util_test-bson_util.Tpo -c -o $(top_builddir)/src/bson_util_test-bson_util.o `test -f '$(top_builddir)/src/bson_util.c' || echo '$(srcdir)/'`$(top_builddir)/src/bson_util.c
-@am__fastdepCC_TRUE@	$(AM_V_at)$(am__mv) $(top_builddir)/src/$(DEPDIR)/bson_util_test-bson_util.Tpo $(top_builddir)/src/$(DEPDIR)/bson_util_test-bson_util.Po
-@AMDEP_TRUE@@am__fastdepCC_FALSE@	$(AM_V_CC)source='$(top_builddir)/src/bson_util.c' object='$(top_builddir)/src/bson_util_test-bson_util.o' libtool=no @AMDEPBACKSLASH@
+../src/bson_util_test-bson_util.o: ../src/bson_util.c
+@am__fastdepCC_TRUE@	$(AM_V_CC)$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(bson_util_test_CFLAGS) $(CFLAGS) -MT ../src/bson_util_test-bson_util.o -MD -MP -MF ../src/$(DEPDIR)/bson_util_test-bson_util.Tpo -c -o ../src/bson_util_test-bson_util.o `test -f '../src/bson_util.c' || echo '$(srcdir)/'`../src/bson_util.c
+@am__fastdepCC_TRUE@	$(AM_V_at)$(am__mv) ../src/$(DEPDIR)/bson_util_test-bson_util.Tpo ../src/$(DEPDIR)/bson_util_test-bson_util.Po
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	$(AM_V_CC)source='../src/bson_util.c' object='../src/bson_util_test-bson_util.o' libtool=no @AMDEPBACKSLASH@
 @AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
-@am__fastdepCC_FALSE@	$(AM_V_CC@am__nodep@)$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(bson_util_test_CFLAGS) $(CFLAGS) -c -o $(top_builddir)/src/bson_util_test-bson_util.o `test -f '$(top_builddir)/src/bson_util.c' || echo '$(srcdir)/'`$(top_builddir)/src/bson_util.c
+@am__fastdepCC_FALSE@	$(AM_V_CC@am__nodep@)$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(bson_util_test_CFLAGS) $(CFLAGS) -c -o ../src/bson_util_test-bson_util.o `test -f '../src/bson_util.c' || echo '$(srcdir)/'`../src/bson_util.c
 
-$(top_builddir)/src/bson_util_test-bson_util.obj: $(top_builddir)/src/bson_util.c
-@am__fastdepCC_TRUE@	$(AM_V_CC)$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(bson_util_test_CFLAGS) $(CFLAGS) -MT $(top_builddir)/src/bson_util_test-bson_util.obj -MD -MP -MF $(top_builddir)/src/$(DEPDIR)/bson_util_test-bson_util.Tpo -c -o $(top_builddir)/src/bson_util_test-bson_util.obj `if test -f '$(top_builddir)/src/bson_util.c'; then $(CYGPATH_W) '$(top_builddir)/src/bson_util.c'; else $(CYGPATH_W) '$(srcdir)/$(top_builddir)/src/bson_util.c'; fi`
-@am__fastdepCC_TRUE@	$(AM_V_at)$(am__mv) $(top_builddir)/src/$(DEPDIR)/bson_util_test-bson_util.Tpo $(top_builddir)/src/$(DEPDIR)/bson_util_test-bson_util.Po
-@AMDEP_TRUE@@am__fastdepCC_FALSE@	$(AM_V_CC)source='$(top_builddir)/src/bson_util.c' object='$(top_builddir)/src/bson_util_test-bson_util.obj' libtool=no @AMDEPBACKSLASH@
+../src/bson_util_test-bson_util.obj: ../src/bson_util.c
+@am__fastdepCC_TRUE@	$(AM_V_CC)$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(bson_util_test_CFLAGS) $(CFLAGS) -MT ../src/bson_util_test-bson_util.obj -MD -MP -MF ../src/$(DEPDIR)/bson_util_test-bson_util.Tpo -c -o ../src/bson_util_test-bson_util.obj `if test -f '../src/bson_util.c'; then $(CYGPATH_W) '../src/bson_util.c'; else $(CYGPATH_W) '$(srcdir)/../src/bson_util.c'; fi`
+@am__fastdepCC_TRUE@	$(AM_V_at)$(am__mv) ../src/$(DEPDIR)/bson_util_test-bson_util.Tpo ../src/$(DEPDIR)/bson_util_test-bson_util.Po
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	$(AM_V_CC)source='../src/bson_util.c' object='../src/bson_util_test-bson_util.obj' libtool=no @AMDEPBACKSLASH@
 @AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
-@am__fastdepCC_FALSE@	$(AM_V_CC@am__nodep@)$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(bson_util_test_CFLAGS) $(CFLAGS) -c -o $(top_builddir)/src/bson_util_test-bson_util.obj `if test -f '$(top_builddir)/src/bson_util.c'; then $(CYGPATH_W) '$(top_builddir)/src/bson_util.c'; else $(CYGPATH_W) '$(srcdir)/$(top_builddir)/src/bson_util.c'; fi`
+@am__fastdepCC_FALSE@	$(AM_V_CC@am__nodep@)$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(bson_util_test_CFLAGS) $(CFLAGS) -c -o ../src/bson_util_test-bson_util.obj `if test -f '../src/bson_util.c'; then $(CYGPATH_W) '../src/bson_util.c'; else $(CYGPATH_W) '$(srcdir)/../src/bson_util.c'; fi`
 
 mostlyclean-libtool:
 	-rm -f *.lo
@@ -959,8 +958,8 @@ clean-generic:
 distclean-generic:
 	-test -z "$(CONFIG_CLEAN_FILES)" || rm -f $(CONFIG_CLEAN_FILES)
 	-test . = "$(srcdir)" || test -z "$(CONFIG_CLEAN_VPATH_FILES)" || rm -f $(CONFIG_CLEAN_VPATH_FILES)
-	-test -z "$(top_builddir)/src/$(DEPDIR)/$(am__dirstamp)" || rm -f $(top_builddir)/src/$(DEPDIR)/$(am__dirstamp)
-	-test -z "$(top_builddir)/src/$(am__dirstamp)" || rm -f $(top_builddir)/src/$(am__dirstamp)
+	-rm -f ../src/$(DEPDIR)/$(am__dirstamp)
+	-rm -f ../src/$(am__dirstamp)
 
 maintainer-clean-generic:
 	@echo "This command is intended for maintainers to use"
@@ -971,7 +970,7 @@ clean-am: clean-checkPROGRAMS clean-generic clean-libtool \
 	mostlyclean-am
 
 distclean: distclean-am
-	-rm -rf $(top_builddir)/src/$(DEPDIR) ./$(DEPDIR)
+	-rm -rf ../src/$(DEPDIR) ./$(DEPDIR)
 	-rm -f Makefile
 distclean-am: clean-am distclean-compile distclean-generic \
 	distclean-tags
@@ -1017,7 +1016,7 @@ install-ps-am:
 installcheck-am:
 
 maintainer-clean: maintainer-clean-am
-	-rm -rf $(top_builddir)/src/$(DEPDIR) ./$(DEPDIR)
+	-rm -rf ../src/$(DEPDIR) ./$(DEPDIR)
 	-rm -f Makefile
 maintainer-clean-am: distclean-am maintainer-clean-generic
 
