--- a/configure.ac
+++ b/configure.ac
@@ -5,6 +5,7 @@ AC_PREREQ([2.69])
 AC_INIT(bson_c_lib, 1.2.1, jacob@livio.io)
 AM_INIT_AUTOMAKE([subdir-objects foreign -Wall])
 AC_CONFIG_MACRO_DIRS([m4])
+m4_ifdef([AM_PROG_AR], [AM_PROG_AR]) # see https://lists.gnu.org/archive/html/automake/2012-05/msg00014.html
 LT_INIT
 AC_CONFIG_SRCDIR([examples/sample.c])
 AC_CONFIG_HEADERS([config.h])
