--- a/BsonJavaPort/bson_java_port/bintray.properties
+++ b/BsonJavaPort/bson_java_port/bintray.properties
@@ -1,8 +1,8 @@
 bintray.user=user
 bintray.key=key
-bintray.repo=sdl_android
+bintray.repo=bson_android
 bintray.artifact=bson_java_port
 bintray.userorg=smartdevicelink
-bintray.publish=false
+bintray.publish=true
 bintray.version=x.x.x
 bintray.vcs=x.x.x
