--- a/BsonJavaPort/bson_java_port/bintray.properties
+++ b/BsonJavaPort/bson_java_port/bintray.properties
@@ -4,5 +4,5 @@ bintray.repo=bson_android
 bintray.artifact=bson_java_port
 bintray.userorg=smartdevicelink
 bintray.publish=true
-bintray.version=x.x.x
-bintray.vcs=x.x.x
+bintray.version=1.2.2
+bintray.vcs=1.2.2
