--- a/configure.ac
+++ b/configure.ac
@@ -4,6 +4,7 @@
 AC_PREREQ([2.69])
 AC_INIT(bson_c_lib, 1.2.1, jacob@livio.io)
 AM_INIT_AUTOMAKE([subdir-objects foreign -Wall])
+AM_MAINTAINER_MODE
 AC_CONFIG_MACRO_DIRS([m4])
 LT_INIT
 AC_CONFIG_SRCDIR([examples/sample.c])
