--- a/configure.ac
+++ b/configure.ac
@@ -2,8 +2,9 @@
 # Process this file with autoconf to produce a configure script.
 
 AC_PREREQ([2.69])
-AC_INIT(bson_c_lib, 1.2.2, jacob@livio.io)
+AC_INIT(bson_c_lib, 1.2.4, jacob@livio.io)
 AM_INIT_AUTOMAKE([subdir-objects foreign -Wall])
+AM_MAINTAINER_MODE
 AC_CONFIG_MACRO_DIRS([m4])
 LT_INIT
 AC_CONFIG_SRCDIR([examples/sample.c])
