--- a/BsonJavaPort/bson_java_port/gradle.properties
+++ b/BsonJavaPort/bson_java_port/gradle.properties
@@ -17,6 +17,9 @@ POM_LICENCE_NAME=BSD 3-Clause
 POM_LICENCE_URL=https://opensource.org/licenses/BSD-3-Clause
 POM_LICENCE_DIST=repo
 
+RELEASE_REPOSITORY_URL=https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/
+SNAPSHOT_REPOSITORY_URL=https://s01.oss.sonatype.org/content/repositories/snapshots/
+
 POM_DEVELOPER_ID=
 POM_DEVELOPER_NAME=
 POM_DEVELOPER_URL=
